workspaces/backstage/e2e-tests/tests/config/notifications-email/mailpit-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mailpit
  labels:
    app: mailpit
    backstage.io/kubernetes-id: developer-hub
spec:
  to:
    kind: Service
    name: mailpit
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
