workspaces/backstage/e2e-tests/tests/config/notifications-email/mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  labels:
    app.kubernetes.io/instance: mailpit
    app.kubernetes.io/name: mailpit
    backstage.io/kubernetes-id: developer-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
        backstage.io/kubernetes-id: developer-hub
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.30
          resources:
            requests:
              cpu: 50m
              ephemeral-storage: 32Mi
              memory: 64Mi
            limits:
              ephemeral-storage: 64Mi
              memory: 128Mi
          ports:
            - containerPort: 1025
            - containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailpit
  labels:
    app: mailpit
    backstage.io/kubernetes-id: developer-hub
spec:
  selector:
    app: mailpit
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: http
      protocol: TCP
      port: 8025
      targetPort: 8025
